--- a/templates/index.html
+++ b/templates/index.html
@@ -101,17 +101,10 @@
             <div class="popup">
                 <span class="b-popup" id="myPopup" align="center" onclick="popup(event)">
                     <div class="popuptext" align="center">
-                        <p>Ключевые возможности:<br>
-<br>
-✅ Интуитивно понятный интерфейс – обучение ИИ через загрузку данных (изображения, аудио, текст) в несколько кликов.<br>
-
-✅ Готовые шаблоны для обучения – предобученные модели для распознавания объектов, звуков, жестов и текста.<br>
-
-✅ Интерактивные интересные уроки – возможность создавать и проходить обучающие курсы с визуализацией работы ИИ.<br>
-
-✅ Облачные вычисления – обработка данных происходит в браузере или на сервере без необходимости мощного железа.<br>
-
-✅ Экспорт моделей – поддержка форматов (TensorFlow.js и что-то ещё было, не помню аххаха) для интеграции в другие проекты.</p>
+                        <p>✨ Интуитивно понятный интерфейс– обучение ИИ через простую загрузку данных (изображения, аудио, текст) всего в несколько кликов.<br>
+                            🚀 Готовые шаблоны для обучения – предобученные модели для распознавания объектов, звуков, жестов и текста.<br>
+                            ☁️ Облачные вычисления – обработка данных прямо в браузере или на сервере, без необходимости в мощном оборудовании.<br>
+                        </p>
                     </div>
                 </span>
             </div>
@@ -138,16 +131,16 @@
         <div class="row">
             <h2>Создать новый проект</h2>
             <div class="new_project">
-                <a href='/page1'>Проект с изображениями</a>
+                <a href='/image_part_dataset'><button type="button" class="btn btn-outline-info">Проект с изображениями</button></a>
             </div>
             <div class="new_project">
-                <a href="/page1">Проект с аудио</a>
+                <a href="/audio_part_dataset"><button type="button" class="btn btn-outline-info">Проект с аудио</button></a>
             </div>
             <div class="new_project">
-                <a href="/page1">Проект с позами</a>
+                <a href="/pose_part_dataset"><button type="button" class="btn btn-outline-info">Проект с позами</button></a>
             </div>
             <div class="new_project">
-                <a href="/page1">Проект с текстом</a>
+                <a href="/text_part_dataset"><button type="button" class="btn btn-outline-info">Проект с текстом</button></a>
             </div>
         </div>
     </div>
